src/snapshots/whatscli__app__tests__active_tasks.snap
---
source: src/app.rs
expression: "render(&mut app, 100, 24)"
---
 WhatsCLI v1.1.6  Maria Oliveira ● online
  conversations / thread / composer
 Conversations               │ ░░░ loading older messages
 › • Maria Oliveira [2]      │   ░░░░░░░░░░░░░░░░░
     Você viu as fotos da vi │ ──────── unread messages ────────
     ◇ message  12:06        │  Maria
   # Equipe Produto          │  Oi! Você viu as fotos da viagem? 📷
     Ravi: revisão amanhã às │  12:06 ◀
     ◇ message  09:20        │
                             │                         You
                             │                         Vi sim — ficaram lindas. Depois te mando as
                             │                         minhas também 😊
                             │                         12:07 ▶
                             │
                             │
                             │
                             │
                             │
                             │
                             │
┌ Message ─────────────────────────────────────────────────────────────────────────────────────────┐
│ Type a message or /command                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 ◌ syncing history +1  ·  Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
