src/snapshots/whatscli__app__tests__chat_search.snap
---
source: src/app.rs
expression: "render(&mut app, 100, 28)"
---
 WhatsCLI v1.1.7  Maria Oliveira ● online
  conversations / thread / composer
 Conversations               │ ──────── unread messages ────────
 › • Maria Oliveira [2]      │  Maria
     Você viu as fotos da vi │  Oi! Você viu as fotos da viagem? 📷
     ◇ message┌ Find a conversation ─────────────────────────────────────────────────┐
   # Equipe Pr│                                                                      │
     Ravi: rev│  ⌕ maria                                                             │
     ◇ message│                                                                      │ te mando as
              │ ──────────────────────────────────────────────────────────────────── │
              │ › Maria Oliveira          Você viu as fotos da viagem?  [2]          │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │ 1 matches  ·  Enter open  ·  Esc close                               │
              │                                                                      │
              └──────────────────────────────────────────────────────────────────────┘
                             │
┌ Message ─────────────────────────────────────────────────────────────────────────────────────────┐
│ Type a message or /command                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
