src/snapshots/whatscli__app__tests__command_palette.snap
---
source: src/app.rs
expression: "render(&app, 100, 28)"
---
 WhatsCLI v1.1.5  Maria Oliveira ● online
  conversations / thread / composer
 Conversations               │ ──────── unread messages ────────
 › • Maria Oliveira [2]      │  Maria
     Você vi┌ Command palette ─────────────────────────────────────────────────────────┐
     ◇ messa│                                                                          │
   # Equipe │  ⌕ send                                                                  │
     Ravi: r│                                                                          │
     ◇ messa│ ──────────────────────────────────────────────────────────────────────── │e mando as
            │ › /sendaudio   Media     Send an audio file                              │
            │   /sendimage   Media     Send an image                                   │
            │   /sendvideo   Media     Send a video                                    │
            │   /upload      Media     Send a document                                 │
            │                                                                          │
            │                                                                          │
            │                                                                          │
            │                                                                          │
            │                                                                          │
            │                                                                          │
            │                                                                          │
            │                                                                          │
            │ ↑↓ choose  Enter run  Esc close                                          │
            │                                                                          │
            └──────────────────────────────────────────────────────────────────────────┘
┌ Message ─────────────────────────────────────────────────────────────────────────────────────────┐
│ Type a message or /command                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
