src/snapshots/whatscli__app__tests__help.snap
---
source: src/app.rs
expression: "render(&app, 100, 28)"
---
 WhatsCLI v1.1.5  Maria Oliveira ● online
  conversations / thread / composer
 Conversations               │ ──────── unread messages ────────
 › • Maria Oliveira [2]      │  Maria
     Você viu ┌ Keyboard help ───────────────────────────────────────────────────────┐
     ◇ message│                                                                      │
   # Equipe Pr│ Navigation                                                           │
     Ravi: rev│   Tab          switch chats/composer                                 │
     ◇ message│   Ctrl+w       focus messages                                        │ te mando as
              │   Ctrl+f       search conversations                                  │
              │   Ctrl+p       command palette                                       │
              │                                                                      │
              │ Composer                                                             │
              │   ←/→ Home End   move cursor by grapheme                             │
              │   Backspace/Delete edit safely · Enter sends                         │
              │                                                                      │
              │ Messages                                                             │
              │   d/o/s/u/i/r  download/open/show/url/info/revoke                    │
              │                                                                      │
              │ Config: /home/mariostjr/.config/whatscli/whatscli.config             │
              │ Esc closes this overlay                                              │
              │                                                                      │
              │                                                                      │
              └──────────────────────────────────────────────────────────────────────┘
┌ Message ─────────────────────────────────────────────────────────────────────────────────────────┐
│ Type a message or /command                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
