src/snapshots/whatscli__app__tests__layout_narrow.snap
---
source: src/app.rs
expression: "render(&mut app, 60, 24)"
---
 WhatsCLI v1.1.7  Maria Oliveira ● online
  conversations / thread / composer
 ──────── unread messages ────────
  Maria
  Oi! Você viu as fotos da viagem? 📷
  12:06 ◀

                        You
                        Vi sim — ficaram lindas. Depois te
                        mando as minhas também 😊
                        12:07 ▶









┌ Message ─────────────────────────────────────────────────┐
│ Type a message or /command                               │
└──────────────────────────────────────────────────────────┘
 Enter send · Ctrl+p commands · Ctrl+f search · Tab chats
