src/snapshots/whatscli__app__tests__layout_short.snap
---
source: src/app.rs
expression: "render(&mut app, 100, 12)"
---
 WhatsCLI v1.1.6  Maria Oliveira ● online
 Conversations               │  Maria
 › • Maria Oliveira [2]      │  Oi! Você viu as fotos da viagem? 📷
     Você viu as fotos da vi │  12:06 ◀
   # Equipe Produto          │
     Ravi: revisão amanhã às │                         You
                             │                         Vi sim — ficaram lindas. Depois te mando as
                             │                         minhas também 😊
                             │                         12:07 ▶
                             │
────────────────────────────────────────────────────────────────────────────────────────────────────
 Enter send  ·  Ctrl+p commands  ·  Ctrl+f search  ·  Tab chats
