src/snapshots/whatscli__app__tests__media_actions_compact.snap
---
source: src/app.rs
expression: "render(&mut app, 86, 26)"
---
 WhatsCLI v1.1.6  Maria Oliveira ● online
  conversations / thread / composer
 Conversations             │ ──────── unread messages ────────
 › • Maria Oliveira [2]    │  Maria
     Você viu as fotos da  │  Oi! Você viu as fotos da viagem? 📷
   # Equipe Produto        │  [ Visualizar ]
     Ravi: revisão amanhã  │  image · photo.webp · 12:06 ◀
                           │
                           │                     ›You
                           │                      Vi sim — ficaram lindas. Depois te
                           │                      mando as minhas também 😊
                           │                      [ Baixar ]
                           │                      document · report.pdf · 12:07 ▶
                           │
                           │
                           │
                           │
                           │
                           │
                           │
                           │
                           │
┌ Message ───────────────────────────────────────────────────────────────────────────┐
│ Type a message or /command                                                         │
└────────────────────────────────────────────────────────────────────────────────────┘
 ↑↓ select  ·  Enter action  ·  i info  ·  d download  ·  Esc composer
