src/snapshots/whatscli__app__tests__media_actions_narrow.snap
---
source: src/app.rs
expression: "render(&mut app, 60, 24)"
---
 WhatsCLI v1.1.7  Maria Oliveira ● online
  conversations / thread / composer
 ──────── unread messages ────────
  Maria
  Oi! Você viu as fotos da viagem? 📷
  [ Visualizar ]
  image · photo.webp · 12:06 ◀

                       ›You
                        Vi sim — ficaram lindas. Depois te
                        mando as minhas também 😊
                        [ Baixar ]
                        document · report.pdf · 12:07 ▶







┌ Message ─────────────────────────────────────────────────┐
│ Type a message or /command                               │
└──────────────────────────────────────────────────────────┘
 ↑↓ select · Enter action · i info · d download · Esc compo…
