src/snapshots/whatscli__app__tests__media_actions_short.snap
---
source: src/app.rs
expression: "render(&mut app, 100, 12)"
---
 WhatsCLI v1.1.6  Maria Oliveira ● online
 Conversations               │                        ›You
 › • Maria Oliveira [2]      │                         Vi sim — ficaram lindas. Depois te mando as
     Você viu as fotos da vi │                         minhas também 😊
   # Equipe Produto          │                         [ Baixar ]
     Ravi: revisão amanhã às │                         document · report.pdf · 12:07 ▶
                             │
                             │
                             │
                             │
────────────────────────────────────────────────────────────────────────────────────────────────────
 ↑↓ select  ·  Enter action  ·  i info  ·  d download  ·  Esc composer
